methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:2: error: identifier expected but 'for' found.
  for (compt <-1 to 4) {
  ^